fix click through bug on Firefox

--- a/src/styles/scss/base/_layout.scss
+++ b/src/styles/scss/base/_layout.scss
@@ -28,4 +28,5 @@ body {
   justify-content: flex-start;
   flex: 1 1 40vw;
   order: 1;
+  pointer-events: none;
 }
