--- a/src/styles/scss/components/_about.scss
+++ b/src/styles/scss/components/_about.scss
@@ -1,3 +1,4 @@
 .about {
   text-shadow: 0 0 10px black;
+  pointer-events: auto;
 }
