--- a/src/styles/scss/components/_teaser.scss
+++ b/src/styles/scss/components/_teaser.scss
@@ -1,3 +1,6 @@
+.teaser-section {
+  pointer-events: auto;
+}
 .teaser {
   max-width: 25rem;
   flex-basis: 50%;
